--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/remixicon@4.1.0/fonts/remixicon.css" rel="stylesheet" /> -->
     <!-- swiper js  -->
     <link rel="stylesheet" href="./swiperjs/swiper-bundle.min.css">
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
     <title>shopee</title>
 </head>
 
@@ -1352,6 +1356,7 @@
 
 
     <script src="./swiperjs/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
